#6 Update Translator for Page Test 2 and finish Test 1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: var(--font-geist-sans);
+    background: linear-gradient(to right, #FFA200, #6EDA78);
 }
 
 .ant-pagination-disabled span {
