--- a/src/components/TestNumberTwo/pageTwo.module.scss
+++ b/src/components/TestNumberTwo/pageTwo.module.scss
@@ -14,6 +14,7 @@
   color: grey;
   width: fit-content;
   padding: 16px;
+  background-color: #d9d9d9;
   border: 1px solid darkgray;
   border-radius: 12px;
   margin-bottom: 16px;
